# Auto-SurveyMind

./: .env.example  .gitignore  .mcp.example.json  .ruffcache.toml  CLAUDE.md  EXECUTION_LOG.md  Makefile  PROJECT_SUMMARY_CN.md  README.md  README_CN.md  SURVEY_DRAFT.md  SURVEY_SCOPE.md  findings.md  gap_analysis.md  install.sh  paper_list.json  plan.md  pyproject.toml  taxonomy.md
docs/: ALI_CODING_PLAN_GUIDE.md  ANTIGRAVITY_ADAPTATION.md  ANTIGRAVITY_ADAPTATION_CN.md  CODEX_CLAUDE_REVIEW_GUIDE.md  CODEX_CLAUDE_REVIEW_GUIDE_CN.md  CODEX_GEMINI_REVIEW_GUIDE.md  CODEX_GEMINI_REVIEW_GUIDE_CN.md  CURSOR_ADAPTATION.md  DEEPXIV_VALIDATION_EVALUATION.md  MINDMAP_AUTOGEN_GUIDE.md  MODELSCOPE_GUIDE.md  MiniMax-GLM-Configuration.md  TRAE_ARIS_RUNBOOK_CN.md  TRAE_ARIS_RUNBOOK_EN.md
paper_analysis_results/: 2306.00978_analysis.md
templates/: FINDINGS_TEMPLATE.md  GAP_ANALYSIS_TEMPLATE.md  MINDMAP_TIKZ_TEMPLATE.tex  PAPER_ANALYSIS_TEMPLATE.md  SURVEY_TEMPLATE.md  TAXONOMY_TEMPLATE.md
tests/: __init__.py  test_arxiv_client.py  test_atomic_write.py  test_checkpoint.py  test_domain_profile.py  test_logging_config.py  test_triage_core.py
tools/: BENCHMARK_EXTRACTOR_README.md  arxiv_client.py  arxiv_discover.py  arxiv_fetch.py  arxiv_json_extractor.py  atomic_write.py  awq_data.json  batch_paper_triage.py  benchmark_comparison.py  benchmark_extractor.py  benchmark_survey.json  benchmark_template.json  checkpoint.py  convert_to_12field.py  csi_har_scaffold.py  domain_profile.py  generate_survey_mindmap.py  init_findings.py  logging_config.py  mcp_base.py  model_packager.py  paper_triage.py  ptqtp_data.json  reflect_engine.py  (+7 more)
(+78 files in other folders)
