[project]
name = "surveymind"
version = "0.1.0"
description = "AI-driven survey paper generation pipeline powered by Claude Code skills"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SurveyMind Contributors"}
]

dependencies = [
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "PyMuPDF>=1.24.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.0",
    "responses>=0.25.0",
    "ruff>=0.6.0",
]

mcp = [
    "lark-oapi>=1.6.0",
]

[project.scripts]
surveymind = "tools.surveymind_run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "RUF001", # ambiguous character name (many math variable names in research code)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF001", "N802", "N803"]
"mcp-servers/*" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
